@@ -17,7 +17,7 @@ from .parsers import *  # noqa
 from .streams import *  # noqa
 from .multipart import *  # noqa
 from .client_ws import ClientWebSocketResponse  # noqa
-from ._ws_impl import WSMsgType, WSCloseCode, Message, WebSocketError  # noqa
+from ._ws_impl import WSMsgType, WSCloseCode, WSMessage, WebSocketError  # noqa
 from .file_sender import FileSender  # noqa
 
 
@@ -35,5 +35,5 @@ __all__ = (client.__all__ +  # noqa
            multidict.__all__ +  # noqa
            multipart.__all__ +  # noqa
            ('hdrs', 'FileSender', 'WSMsgType', 'MsgType', 'WSCloseCode',
-            'WebSocketError', 'Message',
+            'WebSocketError', 'WSMessage',
             'ClientWebSocketResponse'))
